Fixed buttons z-index to be lower than sidebar when open

--- a/resources/assets/scss/components/_button.scss
+++ b/resources/assets/scss/components/_button.scss
@@ -17,7 +17,7 @@ a.btn, button.btn {
   &.pull-right {
     clear: right;
     position: relative;
-    z-index: 10000;
+    z-index: 5000;
   }
 
   &:hover {
